# epolyscat-django-app

./: .gitignore  .gitmodules  MANIFEST.in  README.md  requriments.txt  runtests.py  setup.cfg  setup.py  vetur.config.js
epolyscat_django_app/: :wq  FileOptions.vue  Run_comments  Runs_comments  apps.py  figma_css_alllayers  home.mods  models.py  package.json  runswatch  serializers.py  test1  test2  trecx_utils.py  urls.py  views.py  vue.config.js
epolyscat_django_app/ePolyScat/: .gitignore  CHANGELOG  Doxyfile  LICENSE  runTutorials.sh
epolyscat_django_app/ePolyScat/TOOLS/: CMakeLists.txt  ChemicalData.h  LinearBiCGstab.h  LinearSolver.h  LinearSolverIter.h  MultiVector.h  algebra.h  arpack.h  asciiFile.h  autoconverge.h  constants.h  convergenceNode.h  debugInfo.h  eigenNames.h  farm.h  fileTools.h  inputGenerator.h  inputitem.h  integrate.h  interpolate.h  inverseIter.h  latexDocu.h  linSpaceVector.h  main_test.cpp  matrixTools.h  multiArrayWrapper.h  multiIndex.h  multiStream.h  odeCorSIA.h  odeEuler.h  odeFactory.h  odeImplicitRK.h  odeIntegral.h  odeRungeKutta.h  odeStep.h  odeTest.h  outputTable.h  parameterScan.h  platformSpecific.h  polylagrange.h  (+20 more)
epolyscat_django_app/ePolyScat/TOOLS/CPP/: algebraPiecewise.cpp  autoconverge.cpp  bgv.cpp  butcherTableau.cpp  convergencNode.cpp  debugInfo.cpp  fileTools.cpp  gaunts.cpp  inputitem.cpp  matrixTools.cpp  multiParam.cpp  multiStream.cpp  outputTable.cpp  parameterScan.cpp  problemName.cpp  problemNode.cpp  problemObservable.cpp  problemParameters.cpp  problemResult.cpp  problemTree.cpp  productFunction.cpp  readInput.cpp  readInputList.cpp  tRecXchecks.cpp  tools.cpp  treeExample.cpp  triFactorLU.cpp  useMatrix.cpp
epolyscat_django_app/ePolyScat/TOOLS/zslapack/: zslapack_f77.h
epolyscat_django_app/ePolyScat/TOOLS/zslapack/zlapack/: dlae2.f  dlapy2.f  dlar2v.f  dlascl.f  dlaset.f  dlassq.f  dpbstf.f  dsyr.f  zsign.f
epolyscat_django_app/migrations/: 0001_initial.py  0002_auto_20211103_1120.py  0003_alter_run_root.py  0004_plotparameters.py  0005_remoteexecution_airavata_experiment_status.py  0006_remoteexecution_resource_name.py  0007_experiment_root.py  0008_auto_20220127_1224.py  0009_auto_20220127_1249.py  0010_auto_20220127_1249.py  0011_alter_run_name.py  0012_auto_20220223_0858.py  0013_run_input_table.py  0014_remoteexecution_job_id.py  0015_auto_20220425_1524.py  0016_auto_20220506_0848.py  0017_auto_20250916_1956.py  0018_auto_20251115_0248.py  (+4 more)
epolyscat_django_app/tRecX/: .gitattributes  CMakeLists.txt  README.md
epolyscat_django_app/tRecX/SCRIPTS/: UpCalculator.py  compareToFirst.py  lRuns.py  plot2d.py  plotTools.py  runTools.py  submit_tRecX.py  submit_tools.py
epolyscat_django_app/tRecX/SRCS/core/: axisTree.h  basicDisc.h  basisAbstract.h  basisAssocLeg.h  basisChannel.h  basisDvr.h  basisDyson.h  basisEigen.h  basisGrid.h  basisGridQuad.h  basisHybrid.h  basisMO.h  basisMat1D.h  basisMatAbstract.h  basisMatDependent.h  basisMatMulti.h  basisMatNumbers.h  basisMonomial.h  basisNdim.h  basisOrbitalNumerical.h  basisPolarOff.h  basisProd.h  basisSetDef.h  basisSqrtDVR.h  basisSub.h  basisVector.h  channelsSubregion.h  coefficients.h  coefficientsFloor.h  coefficientsLocal.h  coefficientsSparse.h  coefficientsViewDeep.h  complexScaling.h  convertFromGrid.h  coorEtaR_PEtaPXi.h  coorPolar3D.h  coordinate.h  densityOfStates.h  derivativeBlock.h  derivativeFlat.h  (+100 more)
epolyscat_django_app/tRecX/SRCS/core/CPP/: averageOverAxes.cpp  axis.cpp  axisTree.cpp  bandedOverlap.cpp  basicDisc.cpp  basisAbstract.cpp  basisChannel.cpp  basisDvrSqrt.cpp  basisEigen.cpp  basisGrid.cpp  basisGridQuad.cpp  basisIntegrableRpow.cpp  basisMO.cpp  basisMap1d.cpp  basisMat1D.cpp  basisMatDependent.cpp  basisMatMO.cpp  basisMatMulti.cpp  basisMatNumbers.cpp  basisMatOperator.cpp  basisNdim.cpp  basisOrbital.cpp  basisOrbitalNumerical.cpp  basisPolar2D.cpp  basisPolarOff.cpp  channelsSubregion.cpp  coefficients.cpp  coefficientsFunction.cpp  coefficientsLocal.cpp  coefficientsPermute.cpp  complexScaling.cpp  convertFromGrid.cpp  coorCylinder3D.cpp  coorEtaR_PEtaPXi.cpp  coorParabolic.cpp  coorPolar3D.cpp  coordinate.cpp  coordinateTrans.cpp  densityMatrix1.cpp  densityOfStates.cpp  (+87 more)
epolyscat_django_app/tRecX/SRCS/local/: fieldTailor.h
epolyscat_django_app/tRecX/SRCS/main/: main_dlib.cpp  main_lincom.cpp  main_transformToCoupledLM.cpp
epolyscat_django_app/tRecX/SRCS/user/: dummy.f  userFunctions.h
epolyscat_django_app/tRecX/SRCS/user/CPP/: potSolid.cpp  userFunctions.cpp
epolyscat_django_app/tRecX/TOOLS/: EigenAddonMatrix.h  abort.h  algebraMulti.h  algebraPiecewise.h  arnoldi.h  autoTarget.h  butcherTableau.h  convergenceTarget.h  eigenTools.h  fft.h  folder.h  gaunts.h  labelled.h  linSpaceMap.h  log.h  makePlot.h  matrixBlocking.h  matrixEigenBlock.h  memInfo.h  metric.h  mpiWrapper.h  multiParam.h  odeArnRK4.h  odeCrankNicolson.h  odeRK4.h  odeSIA.h  orthogonalDerived.h  orthopol.h  problemDatabase.h  problemObservable.h  productFunction.h  qtEigenCore.h  qtEigenDense.h  readInput.h  readInputList.h  reuseRun.h  str.h  tMath.h  targetError.h  timeCritical.h  (+13 more)
epolyscat_django_app/tRecX/TOOLS/CPP/: abort.cpp  algebra.cpp  algebraMulti.cpp  arpack.cpp  asciiFile.cpp  autoTarget.cpp  eigenTools.cpp  farm.cpp  fft.cpp  folder.cpp  inputGenerator.cpp  integrate.cpp  inverseIter.cpp  latexDocu.cpp  log.cpp  makePlot.cpp  memInfo.cpp  metric.cpp  mpiWrapper.cpp  multiIndex.cpp  odeTest.cpp  orthogonalDerived.cpp  orthopol.cpp  platformSpecific.cpp  printOutput.cpp  readInputRange.cpp  reuseRun.cpp  runDir.cpp  str.cpp  stringTools.cpp  tMath.cpp  targetError.cpp  timeCritical.cpp  timer.cpp  triFactor.cpp  uiInputItem.cpp  units.cpp  vectorComplex.cpp  vectorReal.cpp  vectorValuedFunction.cpp
epolyscat_django_app/tRecX/TOOLS/zslapack/: CMakeLists.txt  README  zslapack.h
epolyscat_django_app/tRecX/TOOLS/zslapack/dlapack/: dlascl.f
epolyscat_django_app/tRecX/TOOLS/zslapack/zlapack/: dger.f  dlaev2.f  dlanst.f  dlargv.f  dlartg.f  dlartv.f  dlasr.f  dlasrt.f  dpotrf.f  drot.f  dsbgst.f  dsbgv.f  dsbtrd.f  dsteqr.f  dsterf.f
(+529 files in other folders)
