[metadata]
name = epolyscat_django_app
version = 0.1.0
description = Custom Django app with everything needed to be installed in the airavata-django-portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    matplotlib>=3,<3.4
    scipy

[options.entry_points]
airavata.djangoapp =
    epolyscat_django_app = epolyscat_django_app.apps:epolyscatDjangoAppConfig
